Trying to make Live Reload work with Backspace. Also fixed WPM and Accuracy calculations

--- a/SPA Typing Test/styles.css
+++ b/SPA Typing Test/styles.css
@@ -66,6 +66,6 @@
 }
 
 /* Back to menu button */
-#back-menu, #back-menu-results {
+#back-menu, #back-menu-results, #back-to-main {
     margin-top: 20px;
 }
